# ProjectLauncher

./: .gitignore  DEBUG_GUIDE.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  components.d.ts  components.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.zcf/plan/current/: 启动器管理功能.md  工作区和快捷键配置修复.md  添加Tauri开发命令.md
.zcf/plan/history/: 2026-01-23_130404_tauri-launcher-implementation.md
docs/: FEATURE_DOCUMENTATION.md
src/: App.vue  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  launcher.rs  mod.rs  project.rs  shortcut.rs  window.rs
src-tauri/src/models/: cache.rs  config.rs  export.rs  launcher.rs  mod.rs  project.rs
src-tauri/src/services/: cache_manager.rs  launcher_service.rs  mod.rs  monitor_utils.rs  scanner.rs  shortcut_manager.rs  type_detector.rs
src/assets/: main.css
src/components/: CommandPalette.vue  GreetComponent.vue  ProjectContextMenu.vue  ProjectListItem.vue  ProjectTypeIcon.vue  VcsIcon.vue
src/components/icons/: IconThemeDark.vue  IconThemeLight.vue  IconThemeSystem.vue  index.ts
src/components/settings/: AboutSettings.vue  DeleteProjectDialog.vue  ExcludedProjectsDialog.vue  GeneralSettings.vue  ImportExportDialog.vue  ImportExportSettings.vue  LauncherDialog.vue  LauncherManager.vue  ProjectDialog.vue  ProjectManager.vue
src/components/ui/button/: index.ts
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/command/: Command.vue  CommandEmpty.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  CommandList.vue
src/components/ui/confirm-dialog/: ConfirmDialog.vue  (+1 more)
src/composables/: useConfirm.ts  useSearch.ts  useShortcut.ts  useWindow.ts
src/config/: presetApps.ts
src/stores/: launcher.ts  project.ts  settings.ts
src/types/: index.ts
src/views/: SearchWindow.vue  SettingsWindow.vue
(+16 files in other folders)
